added device list, post and get
