# public/swagger.yaml
@@ -70,6 +70,12 @@ paths:
               $ref: '#/components/schemas/ModelDetails'
         required: true
       responses:
+        200:
+          description: Model added
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Model'
         400:
           description: Invalid ID supplied
           content: {}
@@ -222,6 +228,33 @@ paths:
           content: {}
       x-codegen-request-body-name: body     
   /devices/{deviceId}:
+    get:
+      tags:
+      - devices
+      summary: Get details of a device in inventory
+      operationId: getDevice
+      parameters:
+      - name: deviceId
+        in: path
+        description: deviceId of the concentrator model to be edited
+        required: true
+        schema:
+          type: string
+          format: uuid
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Device'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Device'
+        404:
+          description: Device Does not exist
+          content: {}
+      x-codegen-request-body-name: body
     put:
       tags:
       - devices
@@ -637,6 +670,7 @@ components:
         status:
           type: string
           enum:
+          - acquired
           - in_service
           - under_maintenance
           - available
@@ -648,7 +682,7 @@ components:
             long:
               type: string
       xml:
-        name: Device
+        name: DeviceDetails
     OrderRequest:
       type: object
       required:
